<resources>
    <string name="app_name">ShercoFaqApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disclaimer_button_text">Disclaimer</string>
    <string name="start_button_text">Start</string>
    <string name="bike_name">Bike name</string>
    <string name="bike_type">Bike type</string>
    <string name="model_year">Model year</string>
    <string name="engine_type">Engine type</string>
    <string name="engine_volume">Engine volume</string>
    <string name="edition">Edition</string>
    <string name="add_bike_button_text">Add Bike</string>
    <string name="update_bike_button_text">Update bike</string>
    <string name="alert_dialog_title">Delete confirmation</string>
    <string name="alert_dialog_message">Do you really want to delete this bike?</string>
    <string name="alert_dialog_button_yes">Yes</string>
    <string name="alert_dialog_button_no">No</string>
    <string name="sign_up_to_continue">Sign Up To Continue</string>
    <string name="log_in_to_continue">Log In To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="top_menu_account_log_out">Log out</string>
    <string name="name">Name</string>
    <string name="parts_name">Parts name</string>
    <string name="description">Description</string>
    <string name="links">Links</string>
    <string name="find">Find</string>
    <string name="engine_tightening_torques">Engine tightening torques</string>
    <string name="chassis_tightening_torques">Chassis tightening torques</string>
    <string name="solutions">Solutions</string>
    <string name="issues">Issues</string>
    <string name="profile">Profile</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="web_client_id">AIzaSyBysegU7wqhbESEtRDdoDjKxijb0y1WtRU</string>
    <string name="msg_token_fmt">token_string</string>

    <string-array name="bike_type_spinner_text">
        <item>Enduro</item>
        <item>Trial</item>
    </string-array>

    <string-array name="model_year_spinner_text">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="engine_type_spinner_text">
        <item>2S</item>
        <item>4S</item>
    </string-array>

    <string-array name="engine_volume_spinner_text">
        <item>125</item>
        <item>250</item>
        <item>300</item>
        <item>450</item>
        <item>500</item>
    </string-array>

    <string-array name="edition_spinner_text">
        <item>Standard</item>
        <item>Racing</item>
        <item>Factory</item>
    </string-array>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>