<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.BikeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_white_grey">

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:scrollbarSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/typeTextView"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/modelYearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:scrollbarSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/modelYearTextView"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/engineTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:scrollbarSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/engineTypeTextView"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/engineVolumeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:scrollbarSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/engineVolumeTextView"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/editionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minHeight="48dp"
                android:scrollbarSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editionTextView"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/bikeImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/bike_type"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bikeNameEditText" />

            <TextView
                android:id="@+id/modelYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/model_year"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

            <TextView
                android:id="@+id/engineTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/engine_type"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modelYearTextView" />

            <TextView
                android:id="@+id/engineVolumeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/engine_volume"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/engineTypeTextView" />

            <TextView
                android:id="@+id/editionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/edition"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/engineVolumeTextView" />


            <Button
                android:id="@+id/addUpdateBikeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_bike_button_text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/bikeNameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/bike_name"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bikeImageView"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:trackCornerRadius="50dp"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
